2009-01-20  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.7

2009-01-20  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/notification-groups.conf: Remove D-Bus-Call keys, so the
	ActionInvoked signal is sent by default. Fixes NB#97103

	* src/test-notifications.py (emit_notification,
	  notification_closed_handler, action_invoked_handler): Update
	  test code.

	* configure.ac: 0.3.7

	* debian/changelog: Update

2009-01-20  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.6

	* configure.ac: 0.3.6

2009-01-15  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-activate-views-dialog.c (hd_activate_views_dialog_dispose,
	  response_cb, hd_activate_views_dialog_init): Update for changed
	  GConf storage (in a list) of the active views.

2009-01-14  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-notification-manager.c (hd_notification_manager_init): Change
	directory for the persistent notifications db to
	~/.config/hildon-desktop and create it if not exist.

2009-01-13  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Released 0.3.5

	* configure.ac: 0.3.5

2009-01-12  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog: Update.

	* src/hd-incoming-events.c (group_window_response): Invoke default
	action for notifications in switcher when no D-Bus callback is
	defined. Fixes: NB#97103
	  (load_notification_groups): Make D-Bus callback optional.

2009-01-07  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog: Added fixed bug.

2009-01-05  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-change-background-dialog.c (response_cb): Select the
	background image only for the current view. Fixes NB#96380

	* debian/changelog: Update changelog.

2009-01-05  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/hd-bookmark-manager.c (hd_bookmark_manager_parse_bookmark_files,
	  hd_bookmark_manager_bookmark_files_changed,
	  hd_bookmark_manager_monitor_bookmark_files,