@@ -1,31 +1,0 @@
-#! /bin/sh
-
-if [ -r /etc/osso-af-init/af-defines.sh ]; then
-  source /etc/osso-af-init/af-defines.sh
-fi
-
-START_AS_USER=""
-[ -f /bin/su ] && START_AS_USER="su - user"
-
-case "$1" in
-start)
-        $START_AS_USER $LAUNCHWRAPPER_TRYRESTART start \
-	  hildon-home /usr/bin/hildon-home
-        ;;
-stop)
-        $START_AS_USER $LAUNCHWRAPPER_TRYRESTART stop \
-	  hildon-home /usr/bin/hildon-home
-        ;;
-restart)
-        echo "$0: not implemented"
-        exit 1
-        ;;
-force-reload)
-        echo "$0: not implemented"
-        exit 1
-        ;;
-*)      echo "Usage: $0 {start|stop}"
-        exit 1
-        ;;
-esac
-
