@@ -1,0 +1,4 @@
+#!/bin/sh
+
+/usr/bin/hildon-home &
+
